<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group_feature"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_drawer_library"
            android:checked="true"
            android:icon="@drawable/ic_collections_bookmark_24dp"
            android:title="@string/label_library" />
        <item
            android:id="@+id/nav_drawer_updates"
            android:icon="@drawable/ic_update_black_24dp"
            android:title="@string/label_recent_updates" />
        <item
            android:id="@+id/nav_drawer_history"
            android:icon="@drawable/ic_glasses_black_24dp"
            android:title="@string/label_recent_manga" />
        <item
            android:id="@+id/nav_drawer_sources"
            android:icon="@drawable/ic_explore_24dp"
            android:title="@string/label_sources" />
        <item
            android:id="@+id/nav_drawer_batch_add"
            android:icon="@drawable/ic_playlist_add_black_24dp"
            android:title="@string/batch_add" />
        <item
            android:id="@+id/nav_drawer_extensions"
            android:icon="@drawable/ic_extension_24dp"
            android:title="@string/label_extensions" />
        <item
            android:id="@+id/nav_drawer_downloads"
            android:checkable="false"
            android:icon="@drawable/ic_file_download_black_24dp"
            android:title="@string/label_download_queue" />
    </group>
    <group
        android:id="@+id/group_settings"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_drawer_settings"
            android:checkable="false"
            android:icon="@drawable/ic_settings_24dp"
            android:title="@string/label_settings" />
    </group>
</menu>
